# Polars.jl

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Project.toml  README.md  rev.md
.github/workflows/: Tests.yml
c-polars/: .clang-format  Cargo.toml  build.rs  check_header_drift.py
c-polars/include/: arrow.h  polars.h
c-polars/src/: dataframe.rs  expr.rs  ffi_util.rs  io.rs  lib.rs  series.rs  tests.rs  types.rs  value.rs
docs/: Project.toml  docs.jl  make.jl
docs/src/: index.md  limitations.md
docs/src/assets/: sample_data.jl
docs/src/reference/: dt.md  expressions.md  index.md  io.md  laziness.md  lists.md  manipulation.md  selectors.md  strings.md  structs.md  structures.md  utils.md
docs/src/tutorials/: 01-getting-started.md  02-loading-data.md  03-transforming-data.md  04-aggregating-and-grouping.md  05-time-series-analytics.md  06-joining-data.md  07-window-functions-and-ranking.md  08-strings-and-lists.md  09-combining-and-next-steps.md
ext/: PolarsTimeZonesExt.jl
plans/: analytics_gap_batch.md  analytics_gap_batch2.md  api_gap_batch_four.md  api_gap_batch_three.md  bulk_list_reader.md  c_polars_hardening.md  c_polars_review_two.md  callback_infra.md  csv_ipc_io_options.md  definitive_guide_gap_closure.md  docstring_and_examples_coverage.md  ffi_dry_tri_macro.md  ffi_file_split.md  ffi_panic_safety.md  julia_side_review.md  parquet_io_options.md  pivot.md  review_four_fixes.md  review_three_fixes.md  test_porting.md  tier2_analytical_workflows.md  timezones.md  zero_copy_rust_to_julia.md
src/: API.jl  Polars.jl  arrow.jl  dataframe.jl  describe.jl  expr.jl  group_by.jl  join.jl  lazyframe.jl  reshape.jl  select.jl  series.jl  sort.jl  value.jl  verbs.jl
src/api/: API.jl  dataframe.jl  expr.jl  generated.jl  series.jl  types.jl  value.jl
src/arrow/: array.jl  read.jl  schema.jl
src/expr/: datetime.jl  expr.jl  list.jl  meta.jl  selectors.jl  string.jl  struct.jl
src/io/: csv.jl  ipc.jl  parquet.jl
test/: Project.toml  aqua.jl  fixtures.jl  misc.jl  misc_ffi_safety.jl  runtests.jl
test/dataframe/: construction.jl  describe.jl  gc.jl  io.jl
test/datatypes/: binary.jl  datetimes.jl  durations.jl  list_struct_write.jl  lists.jl  series.jl  strings.jl  structs.jl  times.jl  timezones.jl
test/expr/: aggregation.jl  arithmetic.jl  curried_forms.jl  horizontal.jl  is_unique_dup.jl  lit_vector.jl  literals_cast.jl  math.jl  meta.jl  naming.jl  null_handling.jl  order_window.jl  over.jl  replace.jl  sample.jl  selectors.jl  sort_top_k.jl  statistics.jl  when_then_otherwise.jl
test/lazyframe/: collect_schema.jl  head.jl  lazy_vs_eager.jl  scan_csv.jl  scan_ipc.jl  scan_parquet.jl  sink_csv.jl  sink_ipc.jl  sink_parquet.jl
test/operations/: concat.jl  empty.jl  filter.jl  frame_verbs.jl  group_by.jl  group_by_dynamic.jl  join.jl  reshape.jl  select_with_columns.jl  sort.jl  unique.jl
