[package]
name = "c-polars"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.29.0"

[features]
# Off by default: to_titlecase needs a nightly rustc (upstream still depends on unstable std
# internals for this as of polars 0.54.4), which this repo's rust-toolchain pin deliberately
# avoids. Left as a real, opt-in feature for anyone building with their own nightly toolchain.
nightly = ["polars-plan/nightly"]

[dependencies]
polars-core = "0.54.4"
polars-plan = "0.54.4"
polars-compute = "0.54.4"
polars-utils = "0.54.4"
polars-ops = { version = "0.54.4", features = ["round_series"] }
polars = { version = "0.54.4", features = ["parquet", "lazy", "performant", "trigonometry", "abs", "round_series", "strings", "regex", "dynamic_group_by", "product", "propagate_nans", "is_in", "offset_by", "string_pad", "cum_agg", "diff", "rank", "pct_change", "semi_anti_join", "cross_join", "asof_join", "log", "sign", "dtype-decimal", "replace", "pivot", "top_k", "is_unique", "random", "ipc", "interpolate", "timezones"] }
