[package]
name = "c-polars"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars"
crate-type = ["cdylib"]

[build-dependencies]
cbindgen = "0.29.0"

[features]
# Off by default: to_titlecase needs a nightly rustc (upstream still depends on unstable std
# internals for this as of polars 0.54.4), which this repo's rust-toolchain pin deliberately
# avoids. Left as a real, opt-in feature for anyone building with their own nightly toolchain.
nightly = ["polars-plan/nightly"]

[dependencies]
polars-core = "0.54.4"
polars-plan = "0.54.4"
polars-compute = "0.54.4"
polars-utils = "0.54.4"
# Not a Cargo *feature* change (this phase needs none, per plans/definitive_guide_gap_closure.md
# Phase 4) -- a new direct dependency, needed only for the `Either` enum that upstream
# `DataFrame::transpose`'s `new_col_names: Option<Either<String, Vec<String>>>` parameter takes.
# `either` isn't re-exported through `polars::prelude`/`polars_core::prelude`, so it can't be
# reached via an existing dependency despite already being present (as a transitive dependency of
# other crates in the tree) in Cargo.lock at this exact version -- adding it directly here doesn't
# pull in anything new to build.
either = "1.16"
# `dtype-time` is NOT implied by polars' defaults: `dtype-slim` (in `default`) is only
# date+datetime+duration, and `temporal` pulls polars-time without it. polars-core/-io/-lazy/-expr
# happen to get it transitively, but polars-ops does *not* -- leaving its `take_chunked_unchecked`
# Time arm compiled out and falling through to `_ => unreachable!()`, i.e. a process abort on any
# gather (join/gather) over a Time column. Enable it explicitly on both.
polars-ops = { version = "0.54.4", features = ["round_series", "dtype-time"] }
# `meta`: needed for `Expr.meta()` (Phase 3 of the gap-closure plan) -- `polars-plan`'s own
# `meta = []` has zero sub-deps, but it is not implied by any default and so is genuinely off
# without this. `dtype-duration`: needed for the `total_*` Duration-decomposition family
# (`#[cfg(feature = "dtype-duration")]` in polars-plan's `dsl/dt.rs`, Phase 5) -- added here for
# explicitness even though it was *already* transitively active (unlike `dtype-time` above, which
# genuinely needed the fix): `dtype-duration` is part of `dtype-slim`, which is in this `polars`
# crate's own `default` feature set, and its own feature definition already cascades to
# `polars-ops/dtype-duration` (the exact `take_chunked_unchecked` gather arm that broke for
# `dtype-time`) and `polars-plan/dtype-duration`. Confirmed via `cargo tree -e features -i
# polars-ops`/`-i polars-plan` and actual build fingerprints, not just the declared feature list
# (see CLAUDE.md's note that `cargo tree -e features` is the source of truth, not `features = [...]`).
polars = { version = "0.54.4", features = ["parquet", "lazy", "performant", "trigonometry", "abs", "round_series", "strings", "regex", "dynamic_group_by", "product", "propagate_nans", "is_in", "offset_by", "string_pad", "cum_agg", "diff", "rank", "pct_change", "semi_anti_join", "cross_join", "asof_join", "log", "sign", "dtype-decimal", "replace", "pivot", "top_k", "is_unique", "random", "ipc", "interpolate", "timezones", "decompress", "dtype-time", "meta", "dtype-duration"] }

# Without this, `cargo build`'s default dev profile (opt-level 0 for every crate, including every
# vendored polars kernel) is what every dev/test/CI run actually executes -- for a performance
# library this silently invalidates any live timing impression. Optimize dependencies (all of
# polars) while leaving this crate's own thin FFI shim unoptimized/incremental for fast rebuilds
# after a header/binding-only change.
[profile.dev.package."*"]
opt-level = 3
debug = false

# Used for `cargo build --release`, e.g. for distribution artifacts. Not the default dev-loop
# build (see gen/prologue.jl, which prefers target/release when present but falls back to
# target/debug). codegen-units = 1 + thin LTO trades build time/memory for cross-crate inlining
# into polars kernels; if linking OOMs under the repo's -j 4 cap, drop codegen-units to 4.
# `strip = "symbols"` (not just "debuginfo"): verified on the dev build that debug info alone
# accounts for only part of the strippable size (`strip --strip-debug`: 228 MB -> 215 MB) while
# the symbol table accounts for much more (`strip --strip-all`: 215 MB -> 127 MB) -- "symbols"
# drops both in one pass, same as `strip = true`.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
